
Pvcs
----------------------
* Fixed bug where extra double quotes were being added to the call to pcli (CC-604). Patches by Karsten Wintermann and Dave Kilroy.

UCM
----------------------
* Added support for multiple vobs (CC-597). Patch by Mark Holster.

reporting
======================

XmlServlet
----------------------
* Enhancement to enable Cruise to work with the cctray distributed as part of CruiseControl.net. Patch by Davie Moston.
    Install cctray from  http://sourceforge.net/project/showfiles.php?group_id=71179
    Then run cctray, select setting from the tray icon, then add, add server, "Use Custom URL"  with a URL of "http://YOUR_SERVER/cruisecontrol/xml", then select the project you want to monitor and hit OK.

contrib
======================

distributed
----------------------
* Fix thread leak in DistributedMasterBuilder under high load (CC-625). Reported and Tested by Michael Van Hoff
* Fix doc error regarding Unicast Lookup URL settings
* Fix scripts to actually use jini.logging settings. Add readme notes for LAN's with broken hostname resolution.
* Change BuildAgent to auto detect headless environment and run in headless mode.
* Deprecate 'module' attribute, use Project Name automatically.
* Add 'EntryOverrides' feature to add new 'entries' to specific running Agents.


CruiseControl Release Notes - 2.6.1

general
======================

* Fix cruisecontrol.bat in binary release for JAVA_HOME that has spaces (CC-554)
* Output PID to cc.pid in cruisecontrol.sh to fix init.d usage (CC-581).  Patch by Kevin Quigley.
* Binary distribution with embedded Jetty server now also uses Launcher (CC-586).  Patch by Mike Gilbode.
* Add Serializable to all classes required for RMI clients (CC-582).  Investigated by Frank Zoontjens.

contrib
======================

distributed
----------------------
* Updated to use Jini v2.1, rearranged tree, and added upgrade notes to README.html for mixed environments.

build loop
======================

AlienBrain